[gd_scene load_steps=6 format=3 uid="uid://mjpbg0kpp31x"]

[ext_resource type="PackedScene" uid="uid://bj866ltlivhuw" path="res://scenes/etc/Dummy.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://dsdcddtelx5u8" path="res://scripts/main.gd" id="1_tipki"]
[ext_resource type="PackedScene" uid="uid://nj4em35bb2li" path="res://scenes/ui/health_bar.tscn" id="8_85g3d"]

[sub_resource type="LabelSettings" id="LabelSettings_tipki"]
font_size = 64
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tefeu"]
properties/0/path = NodePath(".:text")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="Main" type="Node2D"]
script = ExtResource("1_tipki")

[node name="Dummy" parent="." instance=ExtResource("1_0wfyh")]
position = Vector2(418, 5)

[node name="Dummy2" parent="." instance=ExtResource("1_0wfyh")]
position = Vector2(604, 261)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UI" instance=ExtResource("8_85g3d")]
offset_left = 504.0
offset_top = 623.0
offset_right = 1253.0
offset_bottom = 679.0

[node name="TimeLabel" type="Label" parent="UI"]
offset_left = 890.0
offset_top = 8.0
offset_right = 1019.0
offset_bottom = 96.0
text = "Time"
label_settings = SubResource("LabelSettings_tipki")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="UI/TimeLabel"]
replication_config = SubResource("SceneReplicationConfig_tefeu")

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="EnemySpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cvbjuk7t2yx1x", "uid://dfde1nigv6m7e", "uid://dpldsb20x272n")
spawn_path = NodePath("../EnemyContainer")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dvcahiono6yix", "uid://cvbjuk7t2yx1x")
spawn_path = NodePath("../PlayerContainer")
